--- a/index.html
+++ b/index.html
@@ -17,3 +17,15 @@
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
+
+<body>
+
+    <header>
+
+    </header>
+
+    <main>
+
+    </main>
+
+</body>
