--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
     <main>
         <div class="form">
             <!-- Player 1 Form -->	
-            <input type="text" id="player1name" name="player1name" value="Player1">
+            <input type="text" id="player1name" name="player1name" value="Player1" class="center">
+            
+            <div class="center">
+                <input type="text" value="This is a read-only text box" readonly>
+                <button>Random</button>
+            </div>
             
             <input type="text" value="This is a read-only text box" readonly>
             <button>Random</button>
